<resources>
    <string name="app_name">Empresa no Bolso</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="invalid_phone_number">O telefone está em um formato incorreto, favor corrigir!</string>
    <string name="invalid_email">O email está em um formato incorreto, favor corrigir!</string>

    <string name="attention">Atenção!</string>

    <string name="loading">Carregando...</string>
    <string name="creating">Criando...</string>
    <string name="deleting">Deletando...</string>

    <string name="login">Login</string>
    <string name="user_name">Usuário</string>
    <string name="password">Senha</string>
    <string name="remember_password">Lembrar senha</string>
    <string name="invalid_user">Usuário inválido</string>
    <string name="invalid_password">Senha inválida</string>
    <string name="empty_user">Usuário não pode ser vazio!</string>
    <string name="empty_password">Senha não pode ser vazio!</string>
    <string name="invalid_user_login">Usuário inválido! Por favor, verifique o seu cadastro.</string>
    <string name="invalid_user_password">Senha inválida! Por favor, verifique o seu cadastro.</string>
    <string name="login_success">Login realizado com sucesso!</string>

    <string name="user">Usuário</string>

    <string name="email">Email</string>
    <string name="telephone">Telefone</string>
    <string name="getNews">Receber novidades por email?</string>
    <string name="user_created_success">Usuário criado com sucesso!</string>
    <string name="user_created_error">Erro ao criar usuário!</string>
    <string name="user_already_exist">O usuário já existe!</string>
    <string name="empty_telephone">O telefone é um campo obrigatório!</string>
    <string name="empty_email">O email é um campo obrigatório!</string>

    <string name="expense_category">Categoria da despesa</string>

    <string name="empty_category">O campo Categoria deve possuir algum valor!</string>
    <string name="category_already_exists">A categoria já existe!</string>

    <string name="expense">Despesa</string>

    <string name="expense_date">Data liquidação</string>
    <string name="expense_frequency">Frequência</string>
    <string name="expense_price">Valor da despesa</string>
    <string name="expense_has_creditcard">Despesa em crédito?</string>
    <string name="empty_expense">O campo Despesa deve possuir algum valor!</string>
    <string name="empty_expense_date">O campo Data liquidação deve possuir algum valor!</string>
    <string name="empty_expense_frequency">O campo Frequência deve possuir algum valor!</string>
    <string name="empty_price">O campo Valor da despesa deve possuir algum valor!</string>
    <string name="expense_already_exists">A despesa já existe!</string>
    <string name="splited_creditcard">Qtd. de parcelas</string>

    <string name="category_income">Categoria da entrada</string>

    <string name="income">Entrada</string>

    <string name="income_date">Data entrada</string>
    <string name="income_todate">Até</string>
    <string name="income_frequency">Frequência</string>
    <string name="income_price">Valor entrada</string>
    <string name="empty_income">O campo Despesa deve possuir algum valor!</string>
    <string name="empty_income_date">O campo Despesa deve possuir algum valor!</string>
    <string name="empty_income_todate">O campo Despesa deve possuir algum valor!</string>
    <string name="empty_income_frequency">O campo Despesa deve possuir algum valor!</string>
    <string name="empty_income_price">O campo Valor entrada deve possuir algum valor!</string>
    <string name="empty_category_income">O campo Categoria entrada deve possuir algum valor!</string>
    <string name="income_already_exists">A entrada já existe!</string>

    <string name="creditcard">Cartão de crédito</string>

    <string name="bank">Banco</string>
    <string name="creditcard_flag">Bandeira</string>
    <string name="creditcard_limit">Limite</string>
    <string name="creditcard_enddate">Dia de pagamento</string>
    <string name="empty_creditcard">O campo Cartão de crédito deve possuir algum valor!</string>
    <string name="empty_bank">O campo Banco deve possuir algum valor!</string>
    <string name="empty_creditcard_flag">O campo Bandeira deve possuir algum valor!</string>
    <string name="empty_creditcard_limit">O campo Limite deve possuir algum valor!</string>
    <string name="empty_creditcard_enddate">O campo Dia de pagamento deve possuir algum valor!</string>
    <string name="creditcard_already_exists">O Cartão de crédito já existe!</string>

    <string name="item">Item</string>

    <string name="item_name">Nome</string>
    <string name="item_price">Valor</string>
    <string name="item_stored_quantity">Qtd. estoque</string>
    <string name="meterunit">Unidade de medida</string>
    <string name="item_empty">O campo Item deve possuir algum valor!</string>
    <string name="item_name_empty">O campo Nome deve possuir algum valor!</string>
    <string name="item_price_empty">O campo Valor deve possuir algum valor!</string>
    <string name="item_stored_quantity_empty">O campo Qtd. estoque deve possuir algum valor!</string>
    <string name="item_already_exists">O item já existe!</string>

    <string name="customer">Cliente</string>
    <string name="cep">CEP</string>
    <string name="address">Endereço</string>
    <string name="number">Número</string>
    <string name="neighborhood">Bairro</string>
    <string name="city">Cidade</string>
    <string name="state">Estado</string>
    <string name="telephone1">Telefone Residencial</string>
    <string name="telephone2">Telefone Celular</string>
    <string name="notes">Observações</string>
    <string name="customer_empty">O campo Cliente deve possuir algum valor!</string>
    <string name="customer_name_empty">O campo Nome Cliente deve possuir algum valor!</string>
    <string name="cep_empty">O campo CEP deve possuir algum valor!</string>
    <string name="address_empty">O campo Endereço deve possuir algum valor!</string>
    <string name="number_empty">O campo Número deve possuir algum valor!</string>
    <string name="neighborhood_empty">O campo Bairro deve possuir algum valor!</string>
    <string name="city_empty">O campo Cidade deve possuir algum valor!</string>
    <string name="state_empty">O campo Estado deve possuir algum valor!</string>
    <string name="telephone1_empty">O campo Telefone Residencial deve possuir algum valor!</string>
    <string name="customer_already_exists">O Cliente já existe!</string>


    <string name="successfully_register_customer">Cliente cadastrado com sucesso!</string>

    <string name="success">Sucesso!</string>
    <string name="error">Erro!</string>
    <string name="error_sqlite_insert">Ocorreu um erro na gravação do registro!</string>
    <string name="error_connection_server">Ocorreu um erro na conexão com o servidor!</string>
    <string name="error_restapi_response">Erro! Não foi possível continuar!</string>
    <string name="logout">Sair/Logout</string>
    <string name="ok">OK</string>
    <string name="save">Salvar</string>

    <string name="no_internet_connection">Para realizar essa ação você precisa estar conectado a internet, favor verificar!</string>
    <string name="title_activity_logged_in">Empresa no Bolso</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="more_settings">Mais opções</string>

    <string-array name="customer_menu">
        <item>Cadastrar Cliente</item>
        <item>Listar Clientes</item>
    </string-array>

    <string-array name="credit_card_menu">
        <item>Cadastrar Cartão</item>
        <item>Listar Cartões</item>
    </string-array>

    <string-array name="income_menu">
        <item>Cadastrar Ctga. Entrada</item>
        <item>Cadastrar Entrada</item>
        <item>Listar Entradas</item>
    </string-array>

    <string-array name="expense_menu">
        <item>Cadastrar Ctga. Despesa</item>
        <item>Cadastrar Despesa</item>
        <item>Listar Despesas</item>
    </string-array>

    <string-array name="item_menu">
        <item>Cadastrar Item</item>
        <item>Listar Itens</item>
    </string-array>

    <string-array name="more_settings">
        <item>Aprovar Usuário</item>
        <item>Logout</item>
    </string-array>



</resources>
