<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:padding="4dp"
    app:cardCornerRadius="4dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <TextView
            android:id="@+id/txtCreditCardValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="textView"
            android:textSize="22sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtViewBank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/bank"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCreditCardValue" />

        <TextView
            android:id="@+id/txtBankValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="@+id/txtCreditCardFlagValue"
            app:layout_constraintTop_toBottomOf="@+id/txtCreditCardValue" />

        <TextView
            android:id="@+id/txtViewCreditCardFlag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/creditcard_flag"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtViewBank" />

        <TextView
            android:id="@+id/txtCreditCardFlagValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="TextView"
            app:layout_constraintStart_toEndOf="@+id/txtViewCreditCardFlag"
            app:layout_constraintTop_toBottomOf="@+id/txtBankValue" />

        <TextView
            android:id="@+id/txtViewCreditCardLimit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/creditcard_limit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtViewCreditCardFlag" />

        <TextView
            android:id="@+id/txtCreditCardLimitValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="@+id/txtCreditCardFlagValue"
            app:layout_constraintTop_toBottomOf="@+id/txtCreditCardFlagValue" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>